# LLM_Gateway

./: .env.example  .gitignore  COMPLIANCE_AUDIT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  NEXT_STEPS.md  README.md  alembic.ini  conftest.py  docker-compose.yaml  gatewayprd.md  pyproject.toml  requirements.txt  rule.md  start-gateway.sh
.claude/commands/: code-review.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 56dc87704392_initial_schema.py
config/: endpoints.yaml  endpoints.yaml.example  gateway.yaml  gateway.yaml.example  prometheus.yaml
dashboard/: README.md  package-lock.json
dashboard/src/: App.tsx
docker/: Dockerfile  Dockerfile.dashboard
docs/: ARCHITECTURE_ROADMAP.md  CLIENT_DEPLOYMENT_READINESS.md  SECURITY_OBSERVATIONS.md
src/gateway/: __init__.py  config.py  errors.py  exception_handlers.py  main.py  settings.py
src/gateway/catalog/: __init__.py  discovery.py  models.py
src/gateway/dispatch/: __init__.py  dispatcher.py  registry.py
src/gateway/models/: __init__.py  common.py  internal.py  ollama.py  openai.py
src/gateway/observability/: __init__.py  logging.py  metrics.py
src/gateway/policy/: __init__.py  enforcer.py  (+3 more)
tests/: test_analyzer.py  test_config.py  test_dashboard_api.py  test_dispatch.py  test_guard.py  test_key_manager.py  test_main.py  test_models.py  test_observability.py  test_openai_adapter.py  test_pii.py  test_policy.py  test_providers.py  test_resolution.py  test_routes.py  test_security.py  test_security_store.py  test_settings.py  test_storage.py  test_token_budget.py
(+30 files in other folders)
